# deploykit-gui

./: .eslintrc.cjs  .gitignore  LICENSE  README.md  _typos.toml  eslint.config.js  index.html  package.json  tsconfig.json  vite.config.js  vite.config.ts
.github/workflows/: ci.yml
assets/: base.css  element.scss  main.css  vue-plyr.css
assets/bgm/: bgm.json
src/: App.vue  config.ts  ipc.js  lang_select.json  main.js  main.ts  vite-env.d.ts  vue-plyr.d.ts
src-tauri/: Cargo.toml  bgm.json  build.rs  tauri.conf.json  users
src-tauri/src/: lib.rs  main.rs  parser.rs  utils.rs
src-tauri/src/parser/: mod.rs  timezone.rs  xkeyboard.rs
src/assets/: base.css  main.css
src/components/: AudioPlayer.vue  DKArrowButton.vue  DKBody.vue  DKBottomActions.vue  DKBottomRightButtons.vue  DKBottomSteps.vue  DKFilterSelect.vue  DKIconButton.vue  DKLayout.vue  DKListSelect.vue  DKLogo.vue  DKSpinner.vue  DKStepButtons.vue  DKStripButton.vue
src/locales/: en.json  zh-CN.json  zh-TW.json
src/router/: index.js
src/views/: AbortView.vue  AboutView.vue  AutoPartView.vue  CompleteView.vue  ConfirmView.vue  DesktopOrInstallView.vue  DeviceView.vue  DriverView.vue  ErrorView.vue  EspPartitionView.vue  HostnameView.vue  InstallView.vue  LangSelect.vue  LocaleView.vue  MirrorProgressView.vue  MirrorSelectView.vue  MirrorView.vue  NetworkView.vue  PartitionProgressView.vue  PartitionView.vue  RescueKitView.vue  SwapFileView.vue  UserView.vue  VariantView.vue  WelcomeView.vue
