[package]
name = "deploykit-gui"
version = "0.7.6"
description = "Deploykit GUI frontend"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }
vergen-gix = "1.0.0"
vergen = "9"

[dependencies]
tauri = { version = "1.6", features = ["cli", "shell-open", "dialog-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zbus = { version = "4.2", features = ["tokio"] }
tokio = { version = "1.35", features = ["rt-multi-thread", "process"] }
eyre = "0.6"
nom = "7"
url = "2.5"
reqwest = { version = "0.12", features = ["json"] }
thiserror = "1.0"
libc = "0.2"
futures = "0.3"
rand = "0.8"
axum = "0.7.4"
tower-http = { version = "0.5.2", features = ["fs", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
x11rb = "0.13.1"
sysinfo = "0.30.12"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
