[package]
name = "deploykit-gui"
version = "0.8.1"
description = "Deploykit GUI frontend"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.4", features = [] }
vergen-gix = "1.0.1"
vergen = "9.0.0"

[dependencies]
tauri = { version = "1.7.2", features = [ "window-show", "cli", "shell-open", "dialog-all"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
zbus = { version = "4.4.0", features = ["tokio"] }
tokio = { version = "1.40.0", features = ["rt-multi-thread", "process"] }
eyre = "0.6.12"
nom = "7.1.3"
url = "2.5.2"
reqwest = { version = "0.12.7", features = ["json"] }
thiserror = "1.0.63"
libc = "0.2.158"
futures = "0.3.30"
rand = "0.8.5"
axum = "0.7.5"
tower-http = { version = "0.5.2", features = ["fs", "cors"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
x11rb = "0.13.1"
sysinfo = "0.31.4"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
devtools = ["tauri/devtools"]
