[package]
name = "deploykit-gui"
version = "0.10.0"
description = "Deploykit GUI frontend"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }
vergen-gix = "1.0.2"
vergen = "9.0.1"

[dependencies]
tauri = { version = "2.0.0", features = [] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
zbus = { version = "5.1.0", features = ["tokio"] }
tokio = { version = "1.42.0", features = ["rt-multi-thread", "process"] }
eyre = "0.6.12"
nom = "8"
reqwest = { version = "0.12.8", features = ["json"] }
thiserror = "2"
libc = "0.2.159"
futures = "0.3.30"
rand = "0.9"
axum = "0.8"
tower-http = { version = "0.6.1", features = ["fs", "cors"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
x11rb = "0.13.1"
sysinfo = "0.35"
tauri-plugin-shell = "2.0.0"
tauri-plugin-dialog = "2.0.0"
tauri-plugin-cli = "2.0.0"
libaosc = { version = "0.3", default-features = false, features = ["arch"] }
serde-xml-rs = "0.8.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
devtools = ["tauri/devtools"]

[lib]
name = "app_lib"
# FIXME: Remove 'lib': https://github.com/tauri-apps/tauri/issues/9547
crate-type = ["staticlib", "cdylib", "rlib"]
